--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "pack/my-plugins/start/vim-colors-solarized"]
 	path = pack/my-plugins/start/vim-colors-solarized
-	url = git://github.com/altercation/vim-colors-solarized.git
+	url = git@github.com:altercation/vim-colors-solarized.git
 [submodule "pack/my-plugins/start/nord-vim"]
 	path = pack/my-plugins/start/nord-vim
 	url = git@github.com:arcticicestudio/nord-vim.git
