--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,15 @@
 [submodule "pack/my-plugins/start/dracula"]
 	path = pack/my-plugins/start/dracula
 	url = git@github.com:dracula/vim.git
+[submodule "pack/my-plugins/start/oceanic-next"]
+	path = pack/my-plugins/start/oceanic-next
+	url = https://github.com/mhartington/oceanic-next
+[submodule "pack/my-plugins/start/onedark.vim"]
+	path = pack/my-plugins/start/onedark.vim
+	url = https://github.com/joshdick/onedark.vim
+[submodule "pack/my-plugins/start/palenight.vim"]
+	path = pack/my-plugins/start/palenight.vim
+	url = https://github.com/drewtempelmeyer/palenight.vim
+[submodule "pack/my-plugins/start/vim-one"]
+	path = pack/my-plugins/start/vim-one
+	url = https://github.com/rakr/vim-one
