--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "pack/my-plugins/start/challenger-deep"]
 	path = pack/my-plugins/start/challenger-deep
 	url = https://github.com/challenger-deep-theme/vim
+[submodule "pack/my-plugins/start/vim-obsession"]
+	path = pack/my-plugins/start/vim-obsession
+	url = https://github.com/tpope/vim-obsession
