--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "pack/plugins/start/lightline"]
 	path = pack/plugins/start/lightline
 	url = https://github.com/itchyny/lightline.vim
+[submodule "pack/plugins/start/vim-gitbranch"]
+	path = pack/plugins/start/vim-gitbranch
+	url = https://github.com/itchyny/vim-gitbranch.git
