--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "pack/plugins/start/vim-gitbranch"]
 	path = pack/plugins/start/vim-gitbranch
 	url = https://github.com/itchyny/vim-gitbranch.git
+[submodule "pack/plugins/start/nerdtree"]
+	path = pack/plugins/start/nerdtree
+	url = https://github.com/preservim/nerdtree.git
